testsuite/tests/properties/invalid_node_builder/list_missing_user_field.lkt
import common_empty

@synthetic
class SyntheticLiteralList: ASTList[Literal] {
    f: Int
}

class Example: BaseExample {
    @exported
    @lazy
    prop: SyntheticLiteralList =
        SyntheticLiteralList.builder([]: NodeBuilder[Literal]).build()
}
